<resources>
    <string name="app_name">BSS</string>
    <string name="text1">스마트한 쇼핑 도우미!\n비콘 쇼핑 서비스</string>
    <string name="text2">BSS</string>

    <string name="nav_search">검색</string>
    <string name="nav_notifications">알람</string>
    <string name="nav_location">가까운 매장</string>
    <string name="nav_nearby_clothes_list">근처 옷 보기</string>
    <string name="nav_setting">설정</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">이시은</string>
    <string name="nav_header_subtitle">eos8202@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="home_second">Home Second</string>

    <!--로그인/회원가입-->

    <string name="facebook_app_id">873009302900995</string>
    <string name="fb_login_protocol_scheme">fb873009302900995</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
