<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_nav_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_nav_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_nav_location"
            android:title="@string/nav_location" />
        <item
            android:id="@+id/nav_nearby_clothes_list"
            android:icon="@drawable/ic_nav_near"
            android:title="@string/nav_nearby_clothes_list" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/nav_setting" />
    </group>
</menu>
