<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bss.ui.home.HomeFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_search" />
        <action
            android:id="@+id/action_nav_home_to_nav_setting"
            app:destination="@id/nav_setting" />
        <action
            android:id="@+id/action_nav_home_to_nav_location"
            app:destination="@id/nav_location" />
        <action
            android:id="@+id/action_nav_home_to_nav_notifications"
            app:destination="@id/nav_notifications" />
        <action
            android:id="@+id/action_nav_home_to_nav_voice"
            app:destination="@id/nav_voice" />
    </fragment>
    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.bss.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search">

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.bss.ui.location.LocationFragment"
        android:label="@string/nav_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.bss.ui.notifications.NotificationsFragment"
        android:label="@string/nav_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.bss.ui.setting.SettingFragment"
        android:label="@string/nav_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_voice"
        android:name="com.example.bss.ui.voice.VoiceFragment"
        android:label="@string/nav_voice"
        tools:layout="@layout/fragment_voice" />
</navigation>